--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -70,10 +70,10 @@
             </div>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="blog.html">Blog</a>
-                <a href="testimonial.html">Testimonial</a>
+                <a href="{% url 'index' %}">Home</a>
+                <a href="{% url 'about' %}">About</a>
+                <a href="{% url 'blog' %}">Blog</a>
+                <a href="{% url 'testimonial' %}">Testimonial</a>
               </div>
             </div>
           </div>
@@ -156,22 +156,22 @@
         <div class="info_links">
           <ul>
             <li class="active">
-              <a href="index.html">
+              <a href="{% url 'index' %}">
                 Home
               </a>
             </li>
             <li>
-              <a href="about.html">
+              <a href="{% url 'about' %}">
                 About
               </a>
             </li>
             <li>
-              <a class="" href="blog.html">
+              <a class="" href="{% url 'blog' %}">
                 Blog
               </a>
             </li>
             <li>
-              <a class="" href="testimonial.html">
+              <a class="" href="{% url 'testimonial' %}">
                 Testimonial
               </a>
             </li>
@@ -207,15 +207,15 @@
 
   </div>
   <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
   <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
   <!-- slick  slider -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
   <!-- nice select -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
   <!-- custom js -->
-  <script src="js/custom.js'></script>
+  <script src="{% static 'js/custom.js' %}"></script>
 
 
 </body>
