--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -73,11 +73,11 @@
               </button>
             </div>
             <div id="myNav" class="overlay">
-              <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="blog.html">Blog</a>
-                <a href="testimonial.html">Testimonial</a>
+             <div class="overlay-content">
+                <a href="{% url 'index' %}">Home</a>
+                <a href="{% url 'about' %}">About</a>
+                <a href="{% url 'blog' %}">Blog</a>
+                <a href="{% url 'testimonial' %}">Testimonial</a>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/r1.jpg" class="box-img" alt="">
+              <img src="{% static 'images/r1.jpg' %}" class="box-img" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -251,7 +251,7 @@
             <div class="detail-box">
               <h2>
                 <span> Get the</span> <br>
-                Delfood App
+                Saffron Secret App
               </h2>
               <p>
                 long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The poin
@@ -300,7 +300,9 @@
           </div>
           <div class="detail-box">
             <p>
-              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+              ⭐ "Absolutely delightful! Saffron Secret Biryani Shop has completely changed how I enjoy biryani. Each grain of rice is infused with rich saffron aroma, tender meats, and just the right blend of spices. It's clear they use top-quality ingredients and cook with love. The service is friendly, the portions are generous, and the biryani is consistently amazing. This is my go-to place whenever I crave authentic, mouthwatering biryani. Highly recommended!"
+
+              — A happy customer
             </p>
             <a href="">
               <i class="fa fa-arrow-right" aria-hidden="true"></i>
@@ -380,10 +382,12 @@
             <div class="carousel-item active">
               <div class="detail-box">
                 <h4>
-                  Virginia
+                  Saffron Secret
                 </h4>
                 <p>
-                  Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+                  ⭐ "Absolutely delightful! Saffron Secret Biryani Shop has completely changed how I enjoy biryani. Each grain of rice is infused with rich saffron aroma, tender meats, and just the right blend of spices. It's clear they use top-quality ingredients and cook with love. The service is friendly, the portions are generous, and the biryani is consistently amazing. This is my go-to place whenever I crave authentic, mouthwatering biryani. Highly recommended!"
+
+                — A happy customer
                 </p>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
@@ -391,10 +395,12 @@
             <div class="carousel-item">
               <div class="detail-box">
                 <h4>
-                  Virginia
+                  Saffron Secret
                 </h4>
                 <p>
-                  Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+                  ⭐ "Absolutely delightful! Saffron Secret Biryani Shop has completely changed how I enjoy biryani. Each grain of rice is infused with rich saffron aroma, tender meats, and just the right blend of spices. It's clear they use top-quality ingredients and cook with love. The service is friendly, the portions are generous, and the biryani is consistently amazing. This is my go-to place whenever I crave authentic, mouthwatering biryani. Highly recommended!"
+
+                — A happy customer
                 </p>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
@@ -402,10 +408,12 @@
             <div class="carousel-item">
               <div class="detail-box">
                 <h4>
-                  Virginia
+                 Saffron Secret
                 </h4>
                 <p>
-                  Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+                 ⭐ "Absolutely delightful! Saffron Secret Biryani Shop has completely changed how I enjoy biryani. Each grain of rice is infused with rich saffron aroma, tender meats, and just the right blend of spices. It's clear they use top-quality ingredients and cook with love. The service is friendly, the portions are generous, and the biryani is consistently amazing. This is my go-to place whenever I crave authentic, mouthwatering biryani. Highly recommended!"
+
+                  — A happy customer
                 </p>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
@@ -444,22 +452,22 @@
         <div class="info_links">
           <ul>
             <li class="active">
-              <a href="index.html">
+              <a href="{% url 'index' %}">
                 Home
               </a>
             </li>
             <li>
-              <a href="about.html">
+              <a href="{% url 'about' %}">
                 About
               </a>
             </li>
             <li>
-              <a class="" href="blog.html">
+              <a class="" href="{% url 'blog' %}">
                 Blog
               </a>
             </li>
             <li>
-              <a class="" href="testimonial.html">
+              <a class="" href="{% url 'testimonial' %}">
                 Testimonial
               </a>
             </li>
