--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -130,7 +130,7 @@
       <div class="slider_container">
         <div class="item">
           <div class="img-box">
-            <img src="{% static 'images/slider-img1.png' %}" alt="" />
+            <img src="{% static 'images/mutton/awadhi/chcken1' %}" alt="" />
           </div>
         </div>
         <div class="item">
