--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -133,7 +133,7 @@
       <div class="slider_container">
         <div class="item">
           <div class="img-box">
-            <a href="#">
+            <a href="{% url 'chicken' %}">
               <img src="{% static 'images/slider_images/ChickenSlider.png' %}" alt="" />
             </a>
           </div>
@@ -147,33 +147,35 @@
         </div>
         <div class="item">
           <div class="img-box">
-            <a href="">
+            <a href="{% url 'fish' %}">
               <img src="{% static 'images/slider_images/FishSlider.png' %}" alt="" />
             </a>
           </div>
         </div>
         <div class="item">
           <div class="img-box">
-            <a href="">
+            <a href="{% url 'fry' %}">
               <img src="{% static 'images/slider_images/FrySlider.png' %}" alt="" />
             </a>
           </div>
         </div>
         <div class="item">
           <div class="img-box">
-            <img src="{% static 'images/slider_images/EggSlider.png' %}" alt="" />
+            <a href="{% url 'egg' %}">
+              <img src="{% static 'images/slider_images/EggSlider.png' %}" alt="" />
+            </a>
           </div>
         </div>
         <div class="item">
           <div class="img-box">
-            <a href="">
+            <a href="{% url 'raita' %}">
               <img src="{% static 'images/slider_images/RaitaSlider.png' %}" alt="" />
             </a>
           </div>
         </div>
         <div class="item">
           <div class="img-box">
-            <a href="">
+            <a href="{% url 'sweet' %}">
               <img src="{% static 'images/slider_images/SweetSlider.png' %}" alt="" />
             </a>
           </div>
