--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="item">
-          <div class="img-Fbox">
+          <div class="img-box">
             <a href="{% url 'mutton' %}">
               <img src="{% static 'images/slider_images/MuttonSlider.png' %}" alt="" />
             </a>
