--- a/main/templates/subPages/fry.html
+++ b/main/templates/subPages/fry.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +9,50 @@
     <title>Document</title>
 </head>
 <body>
+
+     <div class="hero_area">
+        <!-- header section strats -->
+        <header class="header_section">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container">
+                    <a class="navbar-brand" href="index.html">
+                        <span>
+                            Saffron Secret
+                        </span>
+                    </a>
+                    <div class="" id="">
+                        <div class="User_option">
+                            <a href="">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                                <span>Login</span>
+                            </a>
+                            <form class="form-inline ">
+                                <input type="search" placeholder="Search" />
+                                <button class="btn  nav_search-btn" type="submit">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </button>
+                            </form>
+                        </div>
+                        <div class="custom_menu-btn">
+                            <button onclick="openNav()">
+                                <img src="{% static 'images/menu.png' %}" alt="">
+                            </button>
+                        </div>
+                        <div id="myNav" class="overlay">
+                            <div class="overlay-content">
+                                <a href="{% url 'index' %}">Home</a>
+                                <a href="{% url 'about' %}">About</a>
+                                <a href="{% url 'blog' %}">Blog</a>
+                                <a href="{% url 'testimonial' %}">Testimonial</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <!-- end header section -->
+
+    </div>
     
 </body>
 </html>
