--- a/main/templates/subPages/mutton.html
+++ b/main/templates/subPages/mutton.html
@@ -4,15 +4,63 @@
 
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
+
     <link rel="stylesheet" href="{% static 'css/style.css' % }">
-    
+
 </head>
+
 <body>
+
+    <div class="hero_area">
+        <!-- header section strats -->
+        <header class="header_section">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container">
+                    <a class="navbar-brand" href="index.html">
+                        <span>
+                            Saffron Secret
+                        </span>
+                    </a>
+                    <div class="" id="">
+                        <div class="User_option">
+                            <a href="">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                                <span>Login</span>
+                            </a>
+                            <form class="form-inline ">
+                                <input type="search" placeholder="Search" />
+                                <button class="btn  nav_search-btn" type="submit">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </button>
+                            </form>
+                        </div>
+                        <div class="custom_menu-btn">
+                            <button onclick="openNav()">
+                                <img src="{% static 'images/menu.png' %}" alt="">
+                            </button>
+                        </div>
+                        <div id="myNav" class="overlay">
+                            <div class="overlay-content">
+                                <a href="{% url 'index' %}">Home</a>
+                                <a href="{% url 'about' %}">About</a>
+                                <a href="{% url 'blog' %}">Blog</a>
+                                <a href="{% url 'testimonial' %}">Testimonial</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <!-- end header section -->
+
+    </div>
+
     <h1>Mutton</h1>
 </body>
+
 </html>
