all links attached

--- a/main/templates/subPages/Egg.html
+++ b/main/templates/subPages/Egg.html
@@ -1,152 +1,88 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
 
-      <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <span>
-              Saffron Secret
-            </span>
-          </a>
-          <div class="" id="">
-            <div class="User_option">
-              <a href="">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <span>Login</span>
-              </a>
-              <form class="form-inline ">
-                <input type="search" placeholder="Search" />
-                <button class="btn  nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
-            </div>
-            <div class="custom_menu-btn">
-              <button onclick="openNav()">
-                <img src="{% static 'images/menu.png' %}" alt="">
-              </button>
-            </div>
-            <div id="myNav" class="overlay">
-              <div class="overlay-content">
-                <a href="{% url 'index' %}">Home</a>
-                <a href="{% url 'about' %}">About</a>
-                <a href="{% url 'blog' %}">Blog</a>
-                <a href="{% url 'testimonial' %}">Testimonial</a>
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
+
+    <!-- font awesome style -->
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" />
+    <!-- nice select -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
+    <!-- slidck slider -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha256-UK1EiopXIL+KVhfbFa8xrmAWPeBjMVdvYMYkTAEv/HI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css.map" integrity="undefined" crossorigin="anonymous" />
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="hero_area">
+      <!-- header section strats -->
+      <header class="header_section">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container">
+            <a class="navbar-brand" href="index.html"><span>Saffron Secret</span></a>
+            <div class="" id="">
+              <div class="User_option">
+                <a href="">
+                  <i class="fa fa-user" aria-hidden="true"></i>
+                  <span>Login</span>
+                </a>
+                <form class="form-inline">
+                  <input type="search" placeholder="Search" />
+                  <button class="btn nav_search-btn" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                </form>
               </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-
-    <!-- slider section -->
-    <section class="slider_section ">
-      <div class="container ">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <div class="detail-box">
-              <h1>
-                Discover Restuarant And Food
-              </h1>
-              <p>
-                when looking at its layout. The point of using Saffron Secret
-              </p>
-            </div>
-            <div class="find_container ">
-              <div class="container">
-                <div class="row">
-                  <div class="col">
-                    <form>
-                      <div class="form-row ">
-                        <div class="form-group col-lg-5">
-                          <input type="text" class="form-control" id="inputHotel" placeholder="Restaurant Name">
-                        </div>
-                        <div class="form-group col-lg-3">
-                          <input type="text" class="form-control" id="inputLocation" placeholder="All Locations">
-                          <span class="location_icon">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                        </div>
-                        <div class="form-group col-lg-3">
-                          <div class="btn-box">
-                            <button type="submit" class="btn ">Search</button>
-                          </div>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
+              <div class="custom_menu-btn">
+                <button onclick="openNav()"><img src="{% static 'images/menu.png' %}" alt="" /></button>
+              </div>
+              <div id="myNav" class="overlay">
+                <div class="overlay-content">
+                  <a href="{% url 'index' %}">Home</a>
+                  <a href="{% url 'about' %}">About</a>
+                  <a href="{% url 'blog' %}">Blog</a>
+                  <a href="{% url 'testimonial' %}">Testimonial</a>
                 </div>
               </div>
             </div>
-          </div>
+          </nav>
         </div>
-      </div>
-      <div class="slider_container">
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'chicken' %}">
-              <img src="{% static 'images/slider_images/ChickenSlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'mutton' %}">
-              <img src="{% static 'images/slider_images/MuttonSlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'fish' %}">
-              <img src="{% static 'images/slider_images/FishSlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'fry' %}">
-              <img src="{% static 'images/slider_images/FrySlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'egg' %}">
-              <img src="{% static 'images/slider_images/EggSlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'raita' %}">
-              <img src="{% static 'images/slider_images/RaitaSlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="img-box">
-            <a href="{% url 'sweet' %}">
-              <img src="{% static 'images/slider_images/SweetSlider.png' %}" alt="" />
-            </a>
-          </div>
-        </div>
+      </header>
+      <!-- end header section -->
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
+      <h1>Egg rice</h1>
 
-      </div>
-    </section>
-    <!-- end slider section -->
-  </div>
 
-    <h1>Egg rice </h1>
-</body>
+    </div>
+
+ <!-- jQery -->
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <!-- bootstrap js -->
+  <script src="{% static 'js/bootstrap.js' %}"></script>
+  <!-- slick  slider -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
+  <!-- nice select -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
+  <!-- custom js -->
+  <script src="{% static 'js/custom.js' %}"></script>
+
+
+  </body>
 </html>
